[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Menus/theme.theme" type="Theme" id=2]
[ext_resource path="res://Menus/Fonts/NationalPark-ExtraBold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Main" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 250.0
margin_top = 47.0
margin_right = 350.0
margin_bottom = 153.0
rect_min_size = Vector2( 100, 0 )

[node name="Title" type="Label" parent="Main/VBoxContainer"]
margin_right = 100.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Barrel"
align = 1

[node name="PlayButton" type="Button" parent="Main/VBoxContainer"]
margin_top = 32.0
margin_right = 100.0
margin_bottom = 54.0
text = "Play"

[node name="SettingsButton" type="Button" parent="Main/VBoxContainer"]
margin_top = 58.0
margin_right = 100.0
margin_bottom = 80.0
text = "Settings"

[node name="ExitButton" type="Button" parent="Main/VBoxContainer"]
margin_top = 84.0
margin_right = 100.0
margin_bottom = 106.0
text = "Exit"

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Settings"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -200.0
margin_right = -2.0

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/CenterContainer"]
margin_left = 218.0
margin_top = 63.0
margin_right = 382.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="Settings/CenterContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 14.0
text = "Settings"
align = 1

[node name="BackButton" type="Button" parent="Settings/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 38.0
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 156.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="Settings/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 52.0
margin_bottom = 15.0
text = "Valume:"

[node name="VolumeSlider" type="HSlider" parent="Settings/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 156.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = -24.0
max_value = 0.0
step = 0.1

[connection signal="pressed" from="Main/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Settings/CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="Settings/CenterContainer/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
